닥터포헤어 추가

--- a/index.html
+++ b/index.html
@@ -225,6 +225,34 @@
                             </div>
                             <div class="swiper-slide slide">
                                 <div class="slide_left">
+                                    <div class="thumnail"><img src="./images/dr_forhair.png" alt=""></div>
+                                </div>
+                                <div class="right">
+                                    <div class="title">
+                                        <h3>닥터포헤어</h3>
+                                    </div>
+                                    <div class="program">
+                                        <span>Figma</span>
+                                        <span>Photoshop</span>
+                                    </div>
+                                    <div class="period">
+                                        <div class="period_left">
+                                            <p>작업기간</p>
+                                            <p>작업페이지</p>
+                                        </div>
+                                        <div class="period_right">
+                                            <p>2days</p>
+                                            <p>메인페이지</p>
+                                        </div>
+                                    </div>
+                                    <div class="site">
+                                        <a href="https://www.figma.com/proto/T1lHwVonXTYgPFAkW7YP0U/%EB%8B%A5%ED%84%B0%ED%8F%AC%ED%97%A4%EC%96%B4?node-id=284-45&p=f&t=ZFyKhCULelIu713o-0&scaling=min-zoom&content-scaling=fixed&page-id=65%3A261" target="_blank">wire frame / prototype<img src="./images/site.png" alt="사이트 이동"></a><br>
+                                        <a href="#" class="dr_site_popup">original site<img src="./images/site.png" alt="사이트 이동"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide slide">
+                                <div class="slide_left">
                                     <div class="thumnail"><img src="./images/kurly.png" alt=""></div>
                                 </div>
                                 <div class="right">
@@ -268,6 +296,7 @@
                                 <div class="swiper-slide slide"><img src="./images/design_bnr_003.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_bnr_004.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_bnr_005.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_bnr_006.jpg" alt=""></div>
                             </div>
                         </div>
                         <div class="swiper" id="long_swiper">
@@ -302,6 +331,12 @@
                 </div>
                 <img src="./images/sprout_ani.gif" alt="">
             </div>
+        </div>
+    </div>
+    <!-- 닥터포헤어 사이트 팝업 -->
+    <div class="dr_popup_bg">
+        <div class="dr_popup">
+            <img src="./images/drforhair_site.jpg" alt="">
         </div>
     </div>
     <!-- 디자인 프로젝트 실행 팝업 -->
