배너 디자인 추가

--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
                                 <div class="swiper-slide slide"><img src="./images/design_bnr_004.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_bnr_005.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_bnr_006.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_bnr_007.jpg" alt=""></div>
                             </div>
                         </div>
                         <div class="swiper" id="long_swiper">
