디자인 작업물 추가

--- a/index.html
+++ b/index.html
@@ -306,10 +306,12 @@
                                 <div class="swiper-slide slide"><img src="./images/design_long_002.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_long_003.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_long_004.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_005.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_long_001.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_long_002.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_long_003.jpg" alt=""></div>
                                 <div class="swiper-slide slide"><img src="./images/design_long_004.jpg" alt=""></div>
+                                <div class="swiper-slide slide"><img src="./images/design_long_005.jpg" alt=""></div>
                             </div>
                         </div>
                     </div>
